@@ -6,6 +6,7 @@ Changes since 3.0-beta1
 - CRASHFIX: in "ansicat", build_body_and_links was crashing with empty links
 - BUGFIX: in "ansicat:gopher", a "/" was often removed between selector and path
 - CRASHFIX: "openk" was crashing when used in a shell pipe
+- "theme" now accept "none" as a color to remove part of the theme you don’t want
 
 ## 3.0-beta1 - February 2nd 2026
 This is a beta release before 3.0. Its goal is to find bugs, allow for a 
